--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
+        "laravolt/indonesia": "^0.34.0",
         "mohamedsabil83/filament-forms-tinyeditor": "^1.7",
         "spatie/laravel-permission": "^5.10"
     },
