--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "laravel/tinker": "^2.7",
         "laravolt/indonesia": "^0.34.0",
         "mohamedsabil83/filament-forms-tinyeditor": "^1.7",
+        "nesbot/carbon": "^2.68",
         "spatie/laravel-permission": "^5.10"
     },
     "require-dev": {
